# src/routes/invoice.routes.ts
@@ -1,0 +1,9 @@
+import { Router } from "express";
+import * as invoiceController from "../controllers/invoice.controller";
+
+const router = Router();
+
+router.post("/:orderId", invoiceController.createInvoice);
+router.patch("/:id/pay", invoiceController.updateInvoicePayment);
+
+export default router; 
